# yijian_next

./: Analysis_test_results.py  URL内容检索结果_SLE相关症状.txt  benchmark_test.py  evaluate.ipynb  gradio_medical_platform.py  image_analysis.py  nostream.py  output_threaded.jsonl  pyproject.toml  qa_dataset.json  readme.md  recommed_inspect_item.py  requirements.txt  simu_weight_mgmt_labdata_comma.csv  simu_weight_mgmt_labdata_dict.txt  simu_weight_mgmt_labdata_report.txt  simu_weight_mgmt_labdata_tab.csv  synthetic_data_pipeline.py  test copy.jsonl  web_enhanced_data_pipeline.py  临床分析_对话症状初步诊断建议.txt  临床分析_患者症状分析.txt  临床分析_系统性红斑狼疮可能性分析.txt  临床摘要_患者症状记录.txt  临床摘要_结构化记录.txt  主要检验指标统计与临床关联分析报告.txt  体重管理心理因素与行为改变科研灵感报告.txt  分子诊断分析报告.txt  创新检验医学研究方向与假设报告.txt  实验室检验推荐.txt  实验室检验推荐_SLE相关症状.txt  患者基本信息分析.txt  数字孪生体重管理干预模拟报告.txt  检验数据EDA分析报告.txt  检验数据质量分析报告.txt  检验资料内容.txt  检验资料搜索结果.txt  检验资料搜索结果.txt.20250601_133744.bak  检验资料搜索结果_SLE相关症状.txt  疾病早期预警与生物标志物组合分析报告.txt  (+4 more)
camel/temp_storage/: meta.json
cotdata_distill/: batch_stream.py
prehandle_of_data/: pdftomarkdown.py
src/: Analysis_test_results.py  audio_to_text.py  benchmark_test.py  data_auto_anaylse_with_research_inspiration.py  doctor_to_patient_data.py  gradio_medical_platform.py
src/Analysis_test_results/: Analysis_test_results.py  最终检验报告.txt  检验报告.txt  血液测试报告.txt
src/cotdata_distill/: Personalized_data.jsonl  alldata.jsonl  batch_stream.py  specific.jsonl  stream.py
src/model_training_and_evaluating/: Qwen3_(14B)_Reasoning_Conversational.ipynb  cot_data_gen_sft_qwen_unsolth_upload_huggingface.py  text.md
(+5 files in other folders)
