[project]
name = "yijian-next"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camel>=0.1.2",
    "camel-ai>=0.2.59",
    "colorama>=0.4.6",
    "gradio>=5.29.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "psutil>=5.9.8",
    "python-dotenv>=1.1.0",
    "requests-oauthlib>=2.0.0",
    "sqlalchemy>=2.0.41",
]
